Inicio del paso 3

--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -29,8 +29,8 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etMeetingId"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content" />
+            android:layout_width="298dp"
+            android:layout_height="59dp" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
